shared prefs all working
- i modified HomeActivity to updatePrefs but it should be done in the button press
- use the user functions to get data (or make new functions like a "ClearPrefs")

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,13 +22,6 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".SplashActivity"
-            android:exported="false">
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
             android:name=".OnboardingActivity"
             android:exported="false">
             <meta-data
@@ -37,6 +30,20 @@
         </activity>
         <activity
             android:name=".ViewLessonsActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".HomeActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".SplashActivity"
             android:exported="true"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
