Added lessons and fixed keyboard during note taking

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         tools:targetApi="31">
         <activity
             android:name=".DoLessonActivity"
+            android:windowSoftInputMode="stateVisible|adjustPan"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
